--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "node src/index.ts"
   },
   "license": "UNLICENSED",
+  "dependencies": {
+    "playwright": "^1.58.2"
+  },
   "devDependencies": {
     "@types/node": "^25.2.3",
     "typescript": "^5.9.3"
